--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,2 +1,27 @@
-<h1>Posts#index</h1>
-<p>Find me in app/views/posts/index.html.erb</p>
+<h1 class="container my-5">Post Here!</h1>
+
+<div class="container" id="mybutton">
+    <%= link_to 'New Post', new_post_path, class: 'btn btn-primary', remote: true %>
+</div>
+
+<div id="form"></div>
+
+<div class="container my-5">
+    <table class="table">
+        <thead>
+            <tr>
+                <th scope="col">Title</th>
+                <th scope="col">Content</th>
+            </tr>
+        </thead>
+        <tbody id="posts">
+            <% @posts.each do |post| %>
+                <tr>
+                    <td><%= post.title %></td>
+                    <td><%= post.content %></td>
+                </tr>
+            <% end %>
+        </tbody>
+    </table>
+</div>
+
