add: slide up to form

--- a/app/views/posts/new.js.erb
+++ b/app/views/posts/new.js.erb
@@ -1,3 +1,7 @@
 $(document).ready(function(){
     $('#form').append('<%= escape_javascript render('posts/form') %>');
+
+        $("#submit").click(function(){
+        $("#form").slideUp("slow");
+    });
 });
