--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -18,7 +18,7 @@
             <%= f.label :content, 'Content' %>
             <%= f.text_field :content, class: 'form-control' %>
         </div>
-        <div class = 'actions my-3'>
+        <div class = 'actions my-3' id="submit">
             <%= f.submit %>
         </div>
     <% end %>
