--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,4 +1,5 @@
 <tr id="post-<%= post.id %>">
     <td><%= post.title %></td>
     <td><%= post.content %></td>
+    <td><%= link_to 'Edit', edit_post_path(post), remote: true, class: 'btn btn-info' %></td>
 </tr>
