--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -2,4 +2,5 @@
     <td><%= post.title %></td>
     <td><%= post.content %></td>
     <td><%= link_to 'Edit', edit_post_path(post), remote: true, class: 'btn btn-info' %></td>
+    <td><%= link_to 'Delete', post, method: :delete, remote: true, class: 'btn btn-danger', data: {confirm: 'Are you sure?'} %></td>
 </tr>
